--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,6 +40,24 @@
             }
         },
         {
+            "label": "check only",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["check"],
+            "group": "build",
+            "options": {
+                "cwd": "${workspaceFolder}/"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        },        
+        {
             "label": "run app test.svg",
             "type": "shell",
             "command": "cargo",
@@ -56,7 +74,25 @@
                 "showReuseMessage": true,
                 "clear": false
             }
-        },        
+        },
+        {
+            "label": "run app same outfile name",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["run", "test.emf"],
+            "group": "build",
+            "options": {
+                "cwd": "${workspaceFolder}/"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
+        },
         {
             "label": "run app no args",
             "type": "shell",
